Change canvas size styles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             #canvas {
                 border: 2px solid black;
                 display: block;
+                max-width: calc(100vh - 4rem);
             }
 
             .wrapper {
